# libgapmis

./: AUTHORS  INSTALL  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
examples/: EBLOSUM62.h  EDNAFULL.h  Makefile.CPU  Makefile.GPU  Makefile.SSE  Makefile.am  Makefile.in  example-1.c
man/: Makefile.am  Makefile.in  libgapmis.3
src/: Makefile.am  Makefile.in  errors.h  gapmis.h  gapmis_cpu.c  gapmis_gpu.c  gapmis_sse.cc
src/sse_utils/: aligned_buffer.h  sse_unit.h  thread.h
